# automl-feature-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  config.py  feature_engineering.py  main.py  schemas.py  serve.py  training.py
tests/: test_feature_engineering.py  test_serve.py
