[project]
name = "automl-feature-pipeline"
version = "0.1.0"
description = "Containerized feature engineering and AutoML pipeline with FastAPI model serving."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "flaml[automl]>=2.6.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
